# vmem

./: Cargo.toml  README.md
examples/: demo.rs  inject.rs  kernel_ab.rs  patch.rs
src/: asm.rs  backend.rs  error.rs  inject.rs  io.rs  lib.rs  maps.rs  patch.rs  pointer.rs  process.rs  scan.rs  scatter.rs
src/backend/: kernel_driver.rs
